# deltastream-connector-python

./: .changie.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml
.changes/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.2.0.md  v0.3.0.md  v0.3.1.md
.changes/unreleased/: Docs-contributing-update.yaml  Features-20250425-223720.yaml  Features-uuid-support.yaml  Fixes-20250919-163236.yaml  Fixes-20251030-001010.yaml  Under the Hood-20250307-011115.yaml  Under the Hood-20250410-235557.yaml  Under-the-Hood-makefile.yaml  Under-the-Hood-openapi-script.yaml  Under-the-Hood-uuid-tests.yaml  Under-the-Hood-uuid-validation.yaml
.github/: copilot-instructions.md
.github/workflows/: python.yml  release.yml
scripts/: generate_apiv2.py
src/deltastream/api/: conn.py  dpconn.py  error.py  handlers.py  resultset_rows.py  rows.py  streaming_rows.py
src/deltastream/api/dataplane/openapi_client/: api_client.py
src/deltastream_connector_python/: __about__.py  __init__.py  api.py  connection.py  cursor.py  datatypes.py  exceptions.py  globals.py  options.py
src/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
src/openapi_client/api/: default_api.py
src/openapi_client/models/: __init__.py  error_response.py  organization.py  result_set.py  result_set_columns_inner.py  result_set_context.py  result_set_data_inner_inner.py  result_set_metadata.py  result_set_partition_info.py  statement_request.py  statement_request_parameters.py  statement_status.py  version.py
tests/: __init__.py  test_connection.py  test_cursor.py
tests/api/: test_driver.py  test_rows.py  test_streaming_rows.py  test_uuid_conversion.py  test_version_method.py
tests/api/controlplane/: test_dataplane_request.py  test_deltastream_api.py  test_error_response.py  test_organization.py  test_result_set.py  test_result_set_columns_inner.py  test_result_set_context.py  test_result_set_data_inner_inner.py  test_result_set_metadata.py  test_result_set_partition_info.py  test_statement_request.py  test_statement_request_parameters.py  test_statement_status.py  test_version.py
tests/api/dataplane/: test_dataplane_api.py  test_error_response.py  test_handlers.py  test_result_set.py  test_result_set_columns_inner.py  test_result_set_data_inner_inner.py  test_result_set_metadata.py  test_result_set_partition_info.py  test_statement_status.py  test_version.py
